# AlgorithmProject2

./: .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh
generator/ConsoleApp1/: ConsoleApp1.sln
generator/ConsoleApp1/ConsoleApp1/: Program.cs
generator/ConsoleApp1/ConsoleApp1/Properties/: launchSettings.json
lsh/: .clang-format  CMakeLists.txt  bindings.cpp  lsh  lsh.cpp  makefile
lsh/include/: myheader.h
lsh/modules/: EuclidianHashing.cpp  EuclidianHashing.h  UserInputHandling.cpp  UserInputHandling.h  globals.cpp  lsh_interface.cpp  lsh_interface.h
lsh/sample_dataset/: query_small_range
lsh/src/: bindings.cpp  myheader.cpp
nlsh/: c-knn  inverted_file.txt  lsh  main.py  neural.py  nlsh_build.py  nlsh_search.py  nshl_build.py  pure-c-knn.py  requirements.txt  results  sift_10  sift_50  test_neural.py
nlsh/build_pipeline/: __init__.py  graph_builder.py  invert.py  invert_partition.py  io_knn.py  kahip_runner.py  neural.py  numpy_runner.py
nlsh/enums/: __init__.py  endian_types.py  kahip_modes.py
nlsh/my_types/: __init__.py  input.py
nlsh/search_pipeline/: helpers.py  output_maker.py
nlsh/types/: input.py
